# led_lamp

./: .cproject  .gitignore  .project  CMakeLists.txt  LISTA_EFEITOS.md  MANUAL_USUARIO.md  README.md  defines.h  directory_struture.txt  fluxograma.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old
components/FastLED-idf/: CMakeLists.txt
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/encoder/: CMakeLists.txt  encoder.c
components/encoder/include/: encoder.h
components/espnow_controller/: CMakeLists.txt  espnow_controller.c
components/espnow_controller/include/: espnow_controller.h
components/fsm/: CMakeLists.txt  fsm.c
components/fsm/include/: fsm.h
components/fsm/test/: test_fsm.c
components/input_event_manager/: CMakeLists.txt  input_event_manager.c
components/input_event_manager/include/: input_event_manager.h
components/input_integrator/: CMakeLists.txt  input_integrator.c
components/input_integrator/include/: input_integrator.h
components/led_controller/: CMakeLists.txt  candle_math.c  led_controller.c  led_effects.c
components/led_controller/effects/: breathing.c  candle.c  candle_math.c  candle_math_logic.c  christmas_tree.c  christmas_twinkle.c  random_twinkle.c  static_color.c  white_temp.c
components/led_controller/effects/include/: breathing.h  candle.h  candle_math.h  candle_math_logic.h  christmas_tree.h  christmas_twinkle.h  random_twinkle.h  static_color.h  white_temp.h
components/led_controller/include/: candle_math.h  ef_breathing.h  ef_candle.h  ef_candle_math.h  ef_christmas_tree.h  ef_christmas_twinkle.h  ef_random_twinkle.h  ef_static_color.h  ef_white_temp.h  hsv2rgb.h  led_controller.h  led_effects.h  table.h
components/led_controller/test/: test_led_controller.c
components/led_driver/: CMakeLists.txt  led_driver.c  led_driver.cpp
components/led_driver/include/: led_driver.h
components/led_effects/: CMakeLists.txt  led_effects.c
components/led_effects/include/: led_effects.h
components/led_effects/test/: test_led_effects.c
components/led_renderer/: CMakeLists.txt  led_renderer.c
components/led_renderer/include/: led_renderer.h
components/nvs_manager/: CMakeLists.txt  nvs_manager.c
components/nvs_manager/include/: nvs_data.h  nvs_manager.h
components/ota_updater/: CMakeLists.txt  ota_updater.c
components/ota_updater/include/: ota_updater.h
components/power_manager/: CMakeLists.txt  power_manager.c
components/power_manager/include/: power_manager.h
components/relay_controller/: CMakeLists.txt  relay_controller.c
components/relay_controller/include/: relay_controller.h
components/sleep_manager/: CMakeLists.txt  sleep_manager.c
components/sleep_manager/include/: sleep_manager.h
components/switch/: CMakeLists.txt  switch.c
components/switch/include/: switch.h
components/system_events/: CMakeLists.txt  system_events.c
components/system_events/include/: system_events.h
components/touch/: CMakeLists.txt  touch.c
components/touch/include/: touch.h
components/touch_button/: CMakeLists.txt  touch_button.c
components/touch_button/include/: touch_button.h
main/: CMakeLists.txt  main.c
main/include/: main.h
shared/: CMakeLists.txt
shared/include/: project_config.h
test/: Encoder.cpp  Encoder.h  example.ino
